tests/sumo/extended/simulation_routing/assignment/errors/empty_taz/errors.sumo
Error: Source taz '1' has no outgoing edges for trip '0'!
Quitting (on error).
